# v0-personal-finance-app

./: README.md  package-lock.json  package.json
app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
app/budgets/: page.tsx
app/forecasting/: page.tsx
app/import/: page.tsx
app/transactions/: page.tsx
components/: calendar-heatmap.tsx  candlestick-chart.tsx  chart-line.tsx  financial-indicators.tsx  lock-screen.tsx  sidebar-navigation.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: database.rs  main.rs  models.rs  security.rs  utils.rs
src-tauri/src/commands/: analytics.rs  auth.rs  budgets.rs  import.rs  mod.rs  transactions.rs
