[package]
name = "finance-manager"
version = "1.0.0"
description = "Gestionnaire Financier Personnel Sécurisé"
authors = ["Finance Manager Team"]
license = "MIT"
repository = ""
default-run = "finance-manager"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
pbkdf2 = "0.12"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "finance-manager"
path = "src/main.rs"
